--- a/bunin/index.html
+++ b/bunin/index.html
@@ -12,7 +12,8 @@
 		<div class="head_place">
 			<div class="head_logo">
 				<a href="http://127.0.0.1:5500/bunin/index.html">
-				<img src="files/pic/metabi_logo_3.jpg">
+					<img src="files/pic/logo.svg">
+				</a>
 			</div>
 			<div class="head_links">
 				<nav>
@@ -24,31 +25,31 @@
 							<a href="http://127.0.0.1:5500/bunin/full_site.html">Сайт</a>
 						</li>
 						<li>
-							<a href="http://127.0.0.1:5500/bunin/contacts.html">Контакты</a>
+							<a href="http://127.0.0.1:5500/bunin/full_site.html">Links &bigtriangledown;</a>
+							<ul>
+								<li><a href="#">Rutube</a></li>
+								<li><a href="#">VK video</a></li>
+								<li><a href="#">Youtube</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="http://127.0.0.1:5500/bunin/contacts.html">Контакты &bigtriangledown;</a>
+							<ul>
+								<li><a href="#">telegram</a></li>
+								<li><a href="#">WhatsUp</a></li>
+								<li><a href="#">mail</a></li>
+								<li><a href="#">vk</a></li>
+							</ul>
 						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="clock_place">
-				<div class="clock" id="clock">00:00:00</div>
-				<div class="clock" id="clock2">00:00:00</div>
+			<div class="login">
+				<a href="https://metabi.ru/auth/login?">Log in</a>
 			</div>
 		</div>
 		<div class="body_place">
-			<div class="left_side">
-				<ul>
-					<li>
-						<a href="http://127.0.0.1:5500/bunin/index.html">Главная</a>
-					</li>
-					<li>
-						<a href="http://127.0.0.1:5500/bunin/full_site.html">Сайт</a>
-					</li>
-					<li>
-						<a href="http://127.0.0.1:5500/bunin/contacts.html">Контакты</a>
-					</li>
-				</ul>
-			</div>
-			<div class="right_side">
+			<div class="body_slide">
 				<ul>
 					<li>loram55</li>
 					<li>lorem500</li>
