--- a/bunin/index.html
+++ b/bunin/index.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-	<div class="container">
+	<!-- <div class="container"> -->
 		<div class="head_place">
 			<div class="head_logo">
 				<a href="http://127.0.0.1:5500/bunin/index.html">
-					<img src="files/pic/logo.svg">
+					<img src="files/pic/logo.svg" alt="Metabi">
 				</a>
 			</div>
 			<div class="head_links">
@@ -27,18 +27,20 @@
 						<li>
 							<a href="http://127.0.0.1:5500/bunin/full_site.html">Links &bigtriangledown;</a>
 							<ul>
-								<li><a href="#">Rutube</a></li>
-								<li><a href="#">VK video</a></li>
+								<li><a href="https://metabi.ru/public/dashboard/0883c32e-7f25-4965-8d7b-c711cf4cf80e">Пример 1</a></li>
+								<li><a href="https://metabi.ru/public/dashboard/9f89d8f4-fd6a-408d-946f-d1aed7d9f7bf">Пример 2</a></li>
+								<li><a href="https://rutube.ru/channel/46773930/">Rutube</a></li>
+								<li><a href="#">VK Video</a></li>
 								<li><a href="#">Youtube</a></li>
 							</ul>
 						</li>
 						<li>
 							<a href="http://127.0.0.1:5500/bunin/contacts.html">Контакты &bigtriangledown;</a>
 							<ul>
-								<li><a href="#">telegram</a></li>
-								<li><a href="#">WhatsUp</a></li>
-								<li><a href="#">mail</a></li>
-								<li><a href="#">vk</a></li>
+								<li><a href="https://t.me/AndreyyBunin">Telegram</a></li>
+								<li><a href="https://wa.me/79081398412">WhatsUp</a></li>
+								<li><a href="mailto:andrej-bunin@mail.ru">E-mail</a></li>
+								<li><a href="https://vk.com/meta_bi">VK</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -50,18 +52,29 @@
 		</div>
 		<div class="body_place">
 			<div class="body_slide">
-				<ul>
-					<li>loram55</li>
-					<li>lorem500</li>
-					<li>loram200</li>
-					<li>loram55</li>
-				</ul>
+				<img id="image" src="files/pic/slaid_1.jpg" alt="image 1" onclick="change_image()">
 			</div>
 		</div>
 		<div class="footer_place">
 
 		</div>
-	</div>
-	<script src="scripts/clock.js"></script>
+	<!-- </div> -->
+	<script>
+        const images = [
+            'files/pic/slaid_1.jpg',
+			'files/pic/slaid_2.jpg',
+			'files/pic/slaid_3.jpg',
+			'files/pic/slaid_4.jpg',
+			'files/pic/slaid_5.jpg',
+			'files/pic/slaid_6.jpg',
+        ];
+
+        let currentIndex = 0;
+
+        function change_image() {
+            currentIndex = (currentIndex + 1) % images.length; // Увеличиваем индекс и используем остаток от деления
+            document.getElementById('image').src = images[currentIndex]; // Меняем изображение
+        }
+    </script>
 </body>
 </html>
