--- a/bunin/pc.html
+++ b/bunin/pc.html
@@ -9,7 +9,6 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="files/fav/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="files/fav/favicon-16x16.png">
 	<link rel="manifest" href="files/fav/site.webmanifest">
-	<script src="scripts/arrow.js" defer></script>
 
 </head>
 <body>
@@ -27,15 +26,16 @@
 							<a href="/">Главная</a>
 						</li>
 						<li>
-							<a href="/error.html" title="Ещё не работает..">Сайт</a>
+							<a href="/full_site.html">Сайт</a>
 						</li>
 						<li>
-							<a href="/">Ссылки</a>
+							<a href="/">Links</a>
 							<ul>
-								<li><a href="http://metabase.metabi.ru/public/dashboard/0883c32e-7f25-4965-8d7b-c711cf4cf80e" target="blank">Пример 1</a></li>
-								<li><a href="http://metabase.metabi.ru/public/dashboard/9f89d8f4-fd6a-408d-946f-d1aed7d9f7bf" target="blank">Пример 2</a></li>
+								<li><a href="https://metabi.ru/public/dashboard/0883c32e-7f25-4965-8d7b-c711cf4cf80e" target="blank">Пример 1</a></li>
+								<li><a href="https://metabi.ru/public/dashboard/9f89d8f4-fd6a-408d-946f-d1aed7d9f7bf" target="blank">Пример 2</a></li>
 								<li><a href="https://rutube.ru/channel/46773930/" target="blank">Rutube</a></li>
 								<li><a href="https://vk.com/meta_bi">VK Video</a></li>
+								<li><a href="#">Youtube</a></li>
 							</ul>
 						</li>
 						<li>
